added controller method with the DTOs as response type, use the models from the generated TS client file)
